--- a/styles.css
+++ b/styles.css
@@ -11,12 +11,9 @@ h1 {
   }
   
   h3 {
-    text-align: center;
-    padding: 20px;
-    border-radius: 7%;
     position: absolute;
     top: 70%;
-    left: 43%;
+    left: 50%;
     transform: translate(-50%, -50%);
     color: white;
     font-size: 30px;
@@ -32,7 +29,7 @@ h1 {
   .button-container {
     position: absolute;
     top: 96%;
-    left: 36%;
+    left: 33%;
     transform: translate(-50%, -50%);
   }
   
@@ -51,7 +48,7 @@ h1 {
     font-size: 16px;
     font-family: Arial, sans-serif;
     background-color: aquamarine;
-    padding: 20px; /* added padding to give space between text and background */
+    padding: 20px;
   }
   
   #resume-text h1 {
@@ -64,7 +61,7 @@ h1 {
     text-align: center;
     position: absolute;
   }
-
+  
   .close-btn {
     position: absolute;
     top: 0;
@@ -80,4 +77,18 @@ h1 {
     color: red;
   }
   
+  #projects-btn {
+    position: absolute;
+    top: 96%;
+    left: 46%;
+    transform: translate(-50%, -50%);
+    margin-left: 20px;
+  }
+  
+  #projects-btn button {
+    background-color: rgb(207, 39, 39);
+    border-radius: 20px;
+    color: white;
+    padding: 10px 20px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS
   
