--- a/styles.css
+++ b/styles.css
@@ -1,94 +1,66 @@
+* {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  color: white;
+  background-color: #333;
+}
+
+header {
+  position: relative;
+  padding: 20px;
+  text-align: center;
+}
+
 h1 {
-    position: absolute;
-    top: 60%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-size: 54px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
-    text-align: center;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  }
-  
-  h3 {
-    position: absolute;
-    top: 70%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    color: white;
-    font-size: 30px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    text-align: center;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
-  }
-  
-  .name {
-    color: aquamarine;
-  }
-  
-  .button-container {
-    position: absolute;
-    top: 96%;
-    left: 33%;
-    transform: translate(-50%, -50%);
-  }
-  
-  button {
-    background-color: black;
-    border-radius: 20px;
-    color: white;
-    padding: 10px 20px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    border-color: aquamarine;
-  }
-  
-  #resume-text {
-    display: none;
-    color: #333;
-    font-size: 16px;
-    font-family: Arial, sans-serif;
-    background-color: aquamarine;
-    padding: 20px;
-  }
-  
-  #resume-text h1 {
-    font-size: 26px;
-    font-weight: bold;
-    color: #040404;
-    background-color: rgb(84, 228, 228);
-    border-radius: 7%;
-    font-family: 'Courier New', Courier;
-    text-align: center;
-    position: absolute;
-  }
-  
-  .close-btn {
-    position: absolute;
-    top: 0;
-    right: 0;
-    margin: 10px;
-    font-size: 24px;
-    background: transparent;
-    border: none;
-    cursor: pointer;
-  }
-  
-  .close-btn:hover {
-    color: red;
-  }
-  
-  #projects-btn {
-    position: absolute;
-    top: 96%;
-    left: 46%;
-    transform: translate(-50%, -50%);
-    margin-left: 20px;
-  }
-  
-  #projects-btn button {
-    background-color: rgb(207, 39, 39);
-    border-radius: 20px;
-    color: white;
-    padding: 10px 20px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS
-  
+  font-size: 3rem;
+  font-family: Georgia, 'Times New Roman', Times, serif;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+.name {
+  color: aquamarine;
+}
+
+h3 {
+  font-size: 26px;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+}
+
+main {
+  position: relative;
+  padding: 20px;
+  text-align: center;
+}
+
+img {
+  width: 100%;
+  max-width: 500px;
+  height: auto;
+  margin-top: 20px;
+}
+
+.button-container {
+  margin-top: 20px;
+}
+
+button {
+  background-color: black;
+  border-radius: 20px;
+  color: white;
+  padding: 10px 20px;
+  border-color: aquamarine;
+  font-size: 1rem;
+}
+
+#resume-text {
+  margin-top: 20px;
+  color: #000000;
+  font-size: 1rem;
+  background
+}
