--- a/styles.css
+++ b/styles.css
@@ -7,7 +7,7 @@
 body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: white;
-  background-color: #333;
+  background-color: #070606;
 }
 
 header {
@@ -32,35 +32,44 @@ h3 {
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
-main {
+.img-container {
   position: relative;
-  padding: 20px;
-  text-align: center;
-}
-
-img {
-  width: 100%;
-  max-width: 500px;
-  height: auto;
-  margin-top: 20px;
+  display: inline-block;
+  z-index: -99;
 }
 
 .button-container {
-  margin-top: 20px;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-button {
+.button-container button {
   background-color: black;
   border-radius: 20px;
   color: white;
   padding: 10px 20px;
   border-color: aquamarine;
   font-size: 1rem;
+  z-index: auto;
 }
 
+.img-container img {
+  width: 100%;
+  height: auto;
+}
+
+
+
+
+
 #resume-text {
+  position: absolute;
   margin-top: 20px;
   color: #000000;
   font-size: 1rem;
-  background
+  background-color: aquamarine;
+  border-radius: 20px;
 }
+
