--- a/styles.css
+++ b/styles.css
@@ -8,19 +8,28 @@ body {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
   color: white;
   background-color: #070606;
+  font-size: 60;
 }
 
 header {
-  position: relative;
+  position: absolute;
+  top: 20%;
+  left: 50%;
+  transform: translate(-50%, -50%);
   padding: 20px;
   text-align: center;
+  
+
 }
 
 h1 {
-  font-size: 3rem;
+  
+  font-size: 50px;
   font-family: Georgia, 'Times New Roman', Times, serif;
   text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
+
+
 
 .name {
   color: aquamarine;
@@ -52,12 +61,21 @@ h3 {
   padding: 10px 20px;
   border-color: aquamarine;
   font-size: 1rem;
-  z-index: auto;
 }
 
 .img-container img {
   width: 100%;
   height: auto;
+}
+
+.close-btn{
+  background-color: black;
+  border-radius: 20px;
+  color: white;
+  padding: 10px 20px;
+  border-color: aquamarine;
+  font-size: 1rem;
+
 }
 
 
@@ -66,10 +84,21 @@ h3 {
 
 #resume-text {
   position: absolute;
-  margin-top: 20px;
+  margin-top: 50px;
   color: #000000;
-  font-size: 1rem;
+  font-size: 30px;
   background-color: aquamarine;
   border-radius: 20px;
+  z-index: 1;
+}
+
+#gmail-btn {
+  background-color: black;
+  border-radius: 20px;
+  color: white;
+  padding: 10px 20px;
+  border-color: aquamarine;
+  font-size: 1rem;
+  margin-right: 10px; /* adjust the margin as needed */
 }
 
